testdata/snapshots/hgrep__tests__arg_matches__invalid_max_context.snap
---
source: src/main.rs
expression: msg
---
"Could not parse \"max-context\" option value as unsigned integer -> invalid digit found in string"
