testdata/snapshots/hgrep__tests__arg_matches__invalid_min_context.snap
---
source: src/main.rs
expression: msg
---
"Could not parse \"min-context\" option value as unsigned integer -> invalid digit found in string"
