testdata/snapshots/hgrep__tests__arg_matches__invalid_opt_for_syntect.snap
---
source: src/main.rs
expression: msg
---
"--custom-assets flag is only available for bat printer"
