testdata/snapshots/hgrep__tests__arg_matches__invalid_tab_width.snap
---
source: src/main.rs
expression: msg
---
"Could not parse \"tab\" option value as unsigned integer -> invalid digit found in string"
