testdata/snapshots/hgrep__tests__arg_matches__invalid_term_width.snap
---
source: src/main.rs
expression: msg
---
"Could not parse \"term-width\" option value as unsigned integer -> invalid digit found in string"
