testdata/snapshots/hgrep__tests__arg_matches__invalid_threads.snap
---
source: src/main.rs
expression: msg
---
"Could not parse \"threads\" option value as unsigned integer -> invalid digit found in string"
