testdata/snapshots/hgrep__tests__arg_matches__no_arg.snap
---
source: src/main.rs
expression: raw
---
[
    (
        "ascii-lines",
        [
            "false",
        ],
    ),
    (
        "background",
        [
            "false",
        ],
    ),
    (
        "crlf",
        [
            "false",
        ],
    ),
    (
        "custom-assets",
        [
            "false",
        ],
    ),
    (
        "first-only",
        [
            "false",
        ],
    ),
    (
        "fixed-strings",
        [
            "false",
        ],
    ),
    (
        "follow-symlink",
        [
            "false",
        ],
    ),
    (
        "generate-man-page",
        [
            "false",
        ],
    ),
    (
        "glob-case-insensitive",
        [
            "false",
        ],
    ),
    (
        "grid",
        [
            "false",
        ],
    ),
    (
        "hidden",
        [
            "false",
        ],
    ),
    (
        "ignore-case",
        [
            "false",
        ],
    ),
    (
        "invert-match",
        [
            "false",
        ],
    ),
    (
        "line-regexp",
        [
            "false",
        ],
    ),
    (
        "list-themes",
        [
            "false",
        ],
    ),
    (
        "max-context",
        [
            "6",
        ],
    ),
    (
        "min-context",
        [
            "3",
        ],
    ),
    (
        "mmap",
        [
            "false",
        ],
    ),
    (
        "multiline",
        [
            "false",
        ],
    ),
    (
        "multiline-dotall",
        [
            "false",
        ],
    ),
    (
        "no-grid",
        [
            "false",
        ],
    ),
    (
        "no-ignore",
        [
            "false",
        ],
    ),
    (
        "no-unicode",
        [
            "false",
        ],
    ),
    (
        "one-file-system",
        [
            "false",
        ],
    ),
    (
        "pcre2",
        [
            "false",
        ],
    ),
    (
        "printer",
        [
            "syntect",
        ],
    ),
    (
        "smart-case",
        [
            "false",
        ],
    ),
    (
        "tab",
        [
            "4",
        ],
    ),
    (
        "type-list",
        [
            "false",
        ],
    ),
    (
        "unrestricted",
        [
            "0",
        ],
    ),
    (
        "word-regexp",
        [
            "false",
        ],
    ),
    (
        "wrap",
        [
            "char",
        ],
    ),
]
